tests/baselines/reference/project/mapRootAbsolutePathSimpleSpecifyOutputFile/node/mapRootAbsolutePathSimpleSpecifyOutputFile.errors.txt
error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
error TS6082: Only 'amd' and 'system' modules are supported alongside --outFile.
m1.ts(3,12): error TS2564: Property 'm1_c1_p1' has no initializer and is not definitely assigned in the constructor.
test.ts(4,12): error TS2564: Property 'p1' has no initializer and is not definitely assigned in the constructor.


!!! error TS5101: Option 'outFile' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5107: Option 'moduleResolution=classic' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --outFile.
==== m1.ts (1 errors) ====
    var m1_a1 = 10;
    class m1_c1 {
        public m1_c1_p1: number;
               ~~~~~~~~
!!! error TS2564: Property 'm1_c1_p1' has no initializer and is not definitely assigned in the constructor.
    }
    
    var m1_instance1 = new m1_c1();
    function m1_f1() {
        return m1_instance1;
    }
==== test.ts (1 errors) ====
    /// <reference path='m1.ts'/>
    var a1 = 10;
    class c1 {
        public p1: number;
               ~~
!!! error TS2564: Property 'p1' has no initializer and is not definitely assigned in the constructor.
    }
    
    var instance1 = new c1();
    function f1() {
        return instance1;
    }